<resources>
    <string name="app_name">UCR Classes</string>

    <!--MainActivity  - general strings-->
    <string name="click_to_continue">Click to Continue</string>
    <string name="sign_in">Sign In</string>
    <string name="guest_sign_in">Continue as Guest</string>
    <string name="logo">Logo</string>
    <string name="background_seal">Background Seal</string>


    <!--SignInActivity - general strings-->
    <string name="sign_in_title_text">Welcome!</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>

    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="email_create_account">Create Account</string>

    <string name="sign_out">Sign Out</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="reset_password">Forgot your password?</string>
    <string name="forgot_password_activity_title">Forgot Password</string>
    <string name="forgot_password_activity_description">Enter your email address, and we\'ll send you a password reset email.</string>

    <!-- SignInActivity -> status strings -->
    <string name="signed_out">Signed Out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="sign_in_success">Signed In!</string>
    <string name="loading">Loading...</string>
    <string name="email_not_verified">Please verify your email address</string>


    <!-- SignOut Activity String(s)-->
    <string name="sure_sign_out">Are you sure you want to sign out?</string>
    <string name="title_activity_deleteme">deleteme</string>

    <!-- Drawer Activity Strings -->
    <string name="account_settings">Settings</string>
    <string name="search_classes">Search Classes</string>
    <string name="view_calendars">View Calendars</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display Name</string>
    <string name="pref_title_change_display_name">Enter a display name</string>

    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!--  -->

    <string name="pref_title_program_name">Major</string>
    <string name="dialog_title_program_name">What is your major?</string>

    <!--  -->

    <string name="pref_title_academic_level">Academic Level</string>
    <string-array name="pref_title_list_academic_levels">
        <item>Undergraduate</item>
        <item>Graduate</item>
    </string-array>
    <string-array name="pref_title_list_academic_values">
        <item>Undergraduate</item>
        <item>Graduate</item>
    </string-array>

    <!--  -->

    <string name="pref_title_quarter">Academic Quarter</string>
    <string name="dialog_title_quarter">Select a term</string>

    <string-array name="pref_title_list_quarters">
        <item>Fall</item>
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer</item>
    </string-array>

    <string-array name="pref_title_list_quarter_values">
        <item>Fall</item>
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer</item>
    </string-array>


    <!--  -->


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!-- PasswordResetActivity Strings -->
    <string name="password_reset_fail">Enter a valid email address</string>
    <string name="password_reset_success">Password reset email sent!</string>

    <!-- ScheduleSelect Strings-->
    <string name="title">Add To</string>
</resources>
