<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name"
        android:dialogTitle="@string/pref_title_change_display_name"
        android:icon="@drawable/ic_person_black"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
   <!-- <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" /> -->

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="Undeclared"
        android:inputType="textCapWords"
        android:key="program_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:title="@string/pref_title_program_name"
        android:dialogTitle="@string/dialog_title_program_name"
        android:icon="@drawable/ic_program_name"/>


    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_title_list_academic_levels"
        android:entryValues="@array/pref_title_list_academic_values"
        android:key="academic_levels"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_academic_level"
        android:icon="@drawable/ic_school_black"/>


    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_title_list_quarters"
        android:entryValues="@array/pref_title_list_quarter_values"
        android:key="quarters"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/dialog_title_quarter"
        android:icon="@drawable/ic_public_black"/>

</PreferenceScreen>
