<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search_classes"
            android:checked="true"/>
        <item
            android:id="@+id/nav_calendar1"
            android:icon="@drawable/ic_calendar"
            android:title="@string/view_calendars" />
        <item
            android:id="@+id/settings_button"
            android:icon="@drawable/ic_settings"
            android:title="@string/account_settings"
            />
        <item
            android:id="@+id/nav_signout_drawer"
            android:icon="@drawable/ic_exit_to_app"
            android:title="Signout" />
    </group>

    

</menu>
